--- a/css/style.css
+++ b/css/style.css
@@ -93,38 +93,6 @@ footer {
     width: 100%;
 }
 
-/*           *** LAYOUT - mobile ***           */
-/***********************************************/
-
-@media only screen and (max-width: 460px) {
-
-    body {
-        grid-template-rows: 1fr;
-    }
-
-    header {
-        height: auto;
-    }
-
-    main {
-        display: flex;
-        flex-direction: column;
-        padding: 0 8%;
-    }
-
-    .box {
-        width: 100%;
-        align-self: center;
-    }
-
-    footer {
-        position: static;
-    }
-}
-
-
-
-
 /**************************************************************/
 /*                    ****** DESIGN ******                    */
 /**************************************************************/
@@ -188,4 +156,79 @@ header p {
 
 .right-box-calculator {
     border-color: var(--calculator-color);
+}
+
+
+/*           *** LAYOUT - mobile ***           */
+/***********************************************/
+
+@media only screen and (max-width: 460px) {
+
+    body {
+        grid-template-rows: 1fr;
+    }
+
+    header {
+        height: auto;
+    }
+
+    header p {
+        width: 80%;
+    }
+
+    main {
+        display: flex;
+        flex-direction: column;
+        padding: 0 8%;
+    }
+
+    .box {
+        width: 100%;
+        align-self: center;
+    }
+
+    footer {
+        position: static;
+    }
+}
+
+/*           *** DESIGN - mobile ***           */
+/***********************************************/
+
+@media only screen and (max-width: 460px) {
+    header h2 {
+        font-size: 1.4em;
+        margin-top: 3em;
+    }
+
+    header h1 {
+        font-size: 1.3em;
+    }
+
+    header p {
+        font-size: 1em;
+        font-weight: 200;
+        margin-bottom: 3.5em;
+    }
+
+    .box {
+        margin-bottom: 1em;
+        padding: 5.3%;
+    }
+
+    .box p {
+        font-weight: 200;
+    }
+
+    .box h3 {
+        font-size: 1em;
+    }
+
+    .box p {
+        font-size: 1em;
+    }
+
+    footer {
+        margin-top: 3em;
+    }
 }
